--- a/grouper/.gitignore
+++ b/grouper/.gitignore
@@ -1,18 +1,10 @@
 build
-conf/ehcache.xml
-conf/grouper.client.properties
-conf/grouper.hibernate.properties
-conf/grouper.properties
-conf/grouper-loader.properties
-conf/ldap.properties
-conf/log4j.properties
-conf/morphString.properties
-conf/sources.xml
-conf/spy.properties
-conf/penn*
 ddlScripts
 dist
 misc/server/i2midev1
 spy.log
 temp
 test.log
+conf/spy.properties
+conf/subject.properties
+ext/lib/temp.txt
